@@ -3,5 +3,6 @@ AUX squeezelite-0.7_alpha_p2-gentoo-optional-codecs.patch 3906 SHA256 cd6687eb24
 AUX squeezelite.conf.d 903 SHA256 7e8819305991509e271f693741b8990c3db97065db3891472ba9eb19e5c2143a SHA512 813f1f29dab07a6ca74222996d67a48088748622c50324e1027b62dd371a0ad53f32c5e9dc1bcb5f1748744930453029266f29079ae7c85da67ea44e792a0f7f WHIRLPOOL 3faa95b2e79de80275832c78cc92eeba936cb3e59d9e0598a131f0149c0e043a1364a6516b929b4dc43f11738c61921ceba24a87105742b07305727e52188a24
 AUX squeezelite.init.d 604 SHA256 189b31e2d613bb8330f1314fcfc34aa90ab0f0c9f5fe84930bb64223acba3020 SHA512 ed45db42fcb25622bb56ffcdc00545f9d604949e12ee08951ca3b9c377430562d53a8d7cb343dfce4ad3b9ca0dfb659070bdfee5b4db0ba86d88a271933d2d4f WHIRLPOOL 4e71775feed5b518f3421d38155f0250c4e3edc1b72fbe8509c1df29dad0b1a749fedc21dfe299b388dde33fb284a41628df774979574ca7d444f5dc6cbfeea3
 DIST 866fcc7c7e14f354da27fd64f50069e762abd835.zip 127144 SHA256 7c5f87a6dd4609f8f48a7404bbb6c96168a1b637d92c4715786fa886a251dd6e SHA512 1e0cc4f90ebf0da8aa4193be43cb138cf0cc34850fcbbc0455dc7a8cb37bb4290a5a49943bce89d1b0e5657b5a25ae24063b884d6683d38ee70917a16e7667e1 WHIRLPOOL 54c4f9f5797b45058b1f068ba65353df9ae5a3cc5573f03d2a64a26e0bdd893f8dfcf8dc2de3e1c13802bac93f1ccb49fd4e68738c4549a75e0990bab812da34
-EBUILD squeezelite-0.7_alpha_p2.ebuild 1925 SHA256 33182a19db859d7eeec8c9efeab07ef86f73eb0df5459558da7c7b2bf8120591 SHA512 b4f70bfaa432fd60cc9e757ff60b56219a4f263a1813c4cd3957c617f7465af5a7d8a08f48b5399aef0e7735dc437cc5b958169a8c23443d41b62a4608999ef0 WHIRLPOOL f2816c25a5cf14c3395e50e68bead0b0aa36c7aa48d5d6ab4a99d6ffbc1ee41148565122fe5de29a1154600116664082868c5b72ab37f6ddfb359ccfd18bb7f6
+EBUILD squeezelite-0.7_alpha_p2.ebuild 2102 SHA256 3fa402ae0c42bee63f4d68f69d7089370dd73fac58becc881679026a0cc96a1b SHA512 e484b78b12554aece345465a22b812f9cf87591f1be0ecd3d55482f12a315701bc7ad0405b73828b6c4152bd45b65fa74e81c3b0b610b55e4596f541515a88b9 WHIRLPOOL 195f4e8efebd88d495fa18ca2c8a1f803acd9ffd83b3f39fa6c6f5223706e31de7d3e12034c2ac1d380561c99063870bb438c3a7790492524dc227bd14f77bbe
+MISC ChangeLog 525 SHA256 3a5207d21266fa034014cc8245dad2b5572316696747694f6b7c855c15692c86 SHA512 a7aefe601f08adb97798fdf9f89233e60ae3c61ed8564795d93f94a1615c3fbd394de2e61def11b268c7f626261db8130d1f75c8d5a6d43b6e4d18867b7ca8e5 WHIRLPOOL 90ed36fa2a8fa82156103652bd154a5461c01e3f7c5d8c92e3821732a52742bc9f42bddd1734a7098dccbb4319b548e72a5852a68ea0ede29b1a6480dde36132
 MISC metadata.xml 1652 SHA256 e43ac5a13b31075363db76645071cf9fca1cc4ea47f72dfac52cd0d1f233882c SHA512 3bdfca19af0312743d6a4954aceb15502efd3d353b48e979aa44280840c2b82c278757659b59457b2e3d0dcc5f54a72fffd8c51d0e08fc935a8ffbe7a79ecdf9 WHIRLPOOL 66fa4ea466043c6bf0514d8a0d07eb652d3ffe5d6a5d601a758f463e8265a2dedde883bf3eecd102a89062f1574c311e6c65a1dbb37386a1d5bc829eda5e1ed6
